Ajout des commentaires sur les méthodes et fonctions Reste à faire :        - Tests unitaires        - Gestion des combats